--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "attus/installer": "^1",
     "attus/entity_base": "^1",
     "dg/rss-php": "^1.4",
-    "attus/og_reader": "^1.0"
+    "attus/og_reader": "^1.0",
+    "attus/entityjson": "^1.3"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
